--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
-<app-header (selector)="onSelection($event)"></app-header>
+<app-header></app-header>
 
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <div *ngIf="selector === 'recepie'"><app-recepies ></app-recepies></div>
-            <div *ngIf="selector === 'list'"><app-shopping-list></app-shopping-list></div>
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
