--- a/src/app/recepies/recepie-detail/recepie-detail.component.html
+++ b/src/app/recepies/recepie-detail/recepie-detail.component.html
@@ -15,9 +15,9 @@
       </span>
     </button>
       <ul class="dropdown-menu">
-        <li><a href="#" (click)="addToCart()">To Shoppinglist</a></li>
-        <li><a href="#">Edit Recepie</a></li>
-        <li><a href="#">Delete Recepie</a></li>
+        <li><a style="cursor: pointer;" (click)="addToCart()">To Shoppinglist</a></li>
+        <li><a style="cursor: pointer;">Edit Recepie</a></li>
+        <li><a style="cursor: pointer;">Delete Recepie</a></li>
       </ul>
     </div>
   </div>
