--- a/src/app/recepies/recepie-list/recepie-list.component.html
+++ b/src/app/recepies/recepie-list/recepie-list.component.html
@@ -7,8 +7,9 @@
 <div class="row">
     <div class="col-xs-12" >
         <app-recepie-item
-        *ngFor="let recepieEl of recepies"
-          [recepie]="recepieEl"></app-recepie-item>
+        *ngFor="let recepieEl of recepies; let i = index"
+          [recepie]="recepieEl"
+          [index]="i"></app-recepie-item>
     </div>
 </div>
 
