--- a/src/app/recepies/recepies.component.html
+++ b/src/app/recepies/recepies.component.html
@@ -3,11 +3,6 @@
         <app-recepie-list></app-recepie-list>
     </div>
     <div class="col-md-7">
-        <app-recepie-detail *ngIf="recivedRecepie; else infoText"
-          [recepie]="recivedRecepie"></app-recepie-detail>
-        <ng-template #infoText>
-          <h1>Please select a recepie!</h1>
-        </ng-template>
-
+        <router-outlet></router-outlet>
     </div>
 </div>
