--- a/src/app/recepies/recepie-detail/recepie-detail.component.html
+++ b/src/app/recepies/recepie-detail/recepie-detail.component.html
@@ -16,7 +16,7 @@
     </button>
       <ul class="dropdown-menu">
         <li><a style="cursor: pointer;" (click)="addToCart()">To Shoppinglist</a></li>
-        <li><a style="cursor: pointer;">Edit Recepie</a></li>
+        <li><a style="cursor: pointer;" [routerLink]="['edit']" >Edit Recepie</a></li>
         <li><a style="cursor: pointer;">Delete Recepie</a></li>
       </ul>
     </div>
